# Dis-GEN

./: Combine_test_2D.ipynb  Combine_test_2D.py  Combine_test_2D.py.8182517.err  Combine_test_2D.py.8182517.out  Crystal_generation.py  Crystal_generation.py.8807173.err  Crystal_generation.py.8807173.out  Crystal_generation.py.8807174.err  Crystal_generation.py.8807174.out  Crystal_generation.py.8807175.err  Crystal_generation.py.8807175.out  Crystal_generation.py.8807198.err  Crystal_generation.py.8807198.out  General_documention.ipynb  LICENSE  README.md  Training_Dis_CSP.py  VAE_2D.ipynb  cif_lines.cif  cif_strings.pkl  config.toml  create_json_file.py  crystal_rep.py  latent_space_optimization.py  latent_space_optimization.py.8797317.err  latent_space_optimization.py.8797317.out  latent_space_optimization.py.8806879.err  latent_space_optimization.py.8806879.out  latent_space_plot.ipynb  latent_space_prediction.py  latent_space_prediction.py.8806759.err  latent_space_prediction.py.8806772.err  latent_space_prediction.py.8806878.err  latent_space_prediction.py.8806878.out  pyproject.toml  reconstruction_error.ipynb  test.ipynb  test_GMM_latent.ipynb  test_ran.ipynb  train.py  (+5 more)
.myqueue/: config.py  queue.sqlite3
New_Kl5_ICSD_dis_site_middle_KL_element1000_lr_5e-06_epochs_2500_batch_64_test_0.2_val_0.1/: coeffs.json  train_loss.csv  val_loss.csv
Old_scripts/: VAE_2D.ipynb
data_ICSD/: dis_gen_icsd_id_test.txt  dis_gen_icsd_id_train.txt  dis_gen_icsd_id_val.txt
dis_csp/: csp_filter.py  generation.py  loss_function.py  model.py  structure_rep.py
dis_gen/: model.py  (+4 more)
