[build-system]
requires = [
    "setuptools>=65",
    "wheel"
]
build-backend = "setuptools.build_meta"

[project]
name = "Dis-CSP"
version = "1.0.0"
authors = [{name = "Martin Hoffmann Petersen", email = "mahpe@dtu.dk"}]
description = "Representation of disordered inorganic crystal structures using Wyckoff sites and generation using VAE model."
readme = "README.md"
requires-python = ">=3.11"
license = {text = "GPL v3.0"}
classifiers = [
    "Development Status :: 1 - Alpha",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Operating System :: OS Independent",
]

dependencies = [
    "ase",
    "pymatgen",
    "pandas",
    "matscipy",
    "torch",
    "scipy",
    "numpy",
    "toml",
]

[project.urls]
Source = "https://github.com/mahpe/Dis-CSP"

[tool.setuptools]
packages = ["Dis-CSP"]

